force-app/main/default/objects/SampleRequest__c/SampleRequest__c.object-meta.xml
<CustomObject>
    <label>Sample Request</label>
    <nameField>
        <label>SampleRequest名稱</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sample</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>