force-app/main/default/objects/SampleRequest__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>客戶</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>AccountR</relationshipName>
    <type>Lookup</type>
</CustomField>