force-app/main/default/objects/SampleRequest__c/fields/Customer_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Customer_Feedback__c</fullName>
    <label>客戶回應</label>
    <type>TextArea</type>
</CustomField>