force-app/main/default/objects/SampleRequest__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>業務機會</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>SampleRequests</relationshipName>
    <type>Lookup</type>
</CustomField>