force-app/main/default/objects/SampleRequest__c/fields/Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>Request_Reason__c</fullName>
    <label>申請原因</label>
    <type>TextArea</type>
</CustomField>