force-app/main/default/objects/SampleRequest__c/fields/SalesStage__c.field-meta.xml
<CustomField>
    <fullName>SalesStage__c</fullName>
    <formula>CASE(
    TEXT(Opportunity__r.StageName),
    &quot;Closed Lost&quot;, &quot;輸單&quot;,
    &quot;Closed Win&quot;, &quot;贏單&quot;,
&quot;Discovery&quot;,&quot;需求及技術討論&quot;,
&quot;Negotiation&quot;,&quot;議價/商務條款&quot;,
&quot;Qualification&quot;,&quot;機會資訊確認&quot;,
&quot;Value Proposition&quot;,&quot;案件資訊確認&quot;,
     &quot;贏單&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>銷售階段</label>
    <type>Text</type>
</CustomField>