force-app/main/default/objects/SampleRequest__c/fields/ShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddress__c</fullName>
    <label>送貨地址</label>
    <type>Address</type>
</CustomField>