force-app/main/default/objects/SampleRequest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>新建</fullName>
            </value>
            <value>
                <fullName>待核准</fullName>
            </value>
            <value>
                <fullName>合作開發中</fullName>
            </value>
            <value>
                <fullName>準備中</fullName>
            </value>
            <value>
                <fullName>已出貨</fullName>
            </value>
            <value>
                <fullName>待客戶回饋</fullName>
            </value>
            <value>
                <fullName>完成</fullName>
            </value>
            <value>
                <fullName>客戶拒絕</fullName>
                <isActive>false</isActive>
                <label>客戶拒絕</label>
            </value>
            <value>
                <fullName>拒絕</fullName>
                <isActive>false</isActive>
                <label>拒絕</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>