force-app/main/default/objects/SampleRequest__c/recordTypes/CoDevelop.recordType-meta.xml
<RecordType>
    <fullName>CoDevelop</fullName>
    <active>true</active>
    <label>Co-Develop</label>
</RecordType>