force-app/main/default/objects/SampleRequest__c/recordTypes/InStock.recordType-meta.xml
<RecordType>
    <fullName>InStock</fullName>
    <active>true</active>
    <label>In-Stock</label>
</RecordType>