force-app/main/default/objects/SampleRequest__c/recordTypes/SelfDevelop.recordType-meta.xml
<RecordType>
    <fullName>SelfDevelop</fullName>
    <active>true</active>
    <label>Self-Develop</label>
</RecordType>